--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ header {
   font-size: 24px;
   display: none;
 }
-header nav {
+header nav ul {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: center;
 }
 header a {
   color: white;
@@ -172,8 +172,33 @@ footer h4 {
     top: 20px;
     font-size: 30px;
   }
-  nav ul li {
+
+  header nav ul {
     display: none;
+  }
+  /* nav ul li {
+    display: none;
+  } */
+  nav ul {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(20, 20, 20);
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul.show {
+    left: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  nav li {
+    display: block;
+    margin: 50px 0;
+    line-height: 20px;
+    font-weight: bold;
   }
   header {
     display: flex;
@@ -272,11 +297,13 @@ footer h4 {
   }
   nav ul.show {
     left: 0;
+    display: flex;
+    flex-direction: column;
   }
   nav li {
     display: block;
     margin: 50px 0;
-    line-height: 30px;
+    line-height: 20px;
     font-weight: bold;
   }
   header {
